--- a/style.css
+++ b/style.css
@@ -1,6 +1,36 @@
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+   background: rgb(30, 30, 30);
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+}
 .grid{
     display: flex;
     flex-wrap: wrap;
-    height: 300px;
-    width: 400px;
+    width: 100%;
+    margin: 0 auto;
+    height: 75vh;
+}
+h3{
+    text-align: center;
+    font-size:3em;
+    margin: 35px auto 15px auto;
+    font-weight: bold;
+    color: gray;
+}
+img{
+    width:25%;
+    height:25vh;
+}
+.bg{
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: center;
+    width: 65%;
+    height: 75vh;
+    margin: 0 auto;
 }
