--- a/css/nokia-3310-snake.css
+++ b/css/nokia-3310-snake.css
@@ -39,30 +39,20 @@ nav a:hover{
 nav li{
     margin: 16px 11px 16px 11px;
 }
-h3{
-    text-align: center;
-    font-size:3em;
-    margin: 35px auto 15px auto;
-    font-weight: bold;
-    color: gray;
-}
+
 .grid{
+    width: 200px;
+    height: 200px;
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    margin: 0 auto;
-    height: 75vh;
+    border-style: solid;
 }
-
-img{
-    width:25%;
-    height:25vh;
+.grid div{
+    width: 10%;
 }
-.bg{
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-position: center;
-    width: 65%;
-    height: 75vh;
-    margin: 0 auto;
+.snake{
+    background-color: blue;
+}
+.apple{
+    background-color: purple;
 }
