--- a/css/whack-a-mole.css
+++ b/css/whack-a-mole.css
@@ -72,6 +72,7 @@ h2{
     background-image: url('https://cdn-icons-png.flaticon.com/128/5050/5050857.png');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
 @media(max-width:650px){
     nav{
